--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ jedi==0.16.0
 Jinja2==3.0.2
 mccabe==0.6.1
 more-itertools==8.0.2
+msgpack==1.0.2
 mypy==0.770
 mypy-extensions==0.4.3
 packaging==19.2
